--- a/about_html.css
+++ b/about_html.css
@@ -13,3 +13,18 @@ html{
   font-family:serif;
   font-style:italic;
 }
+a:link {
+  color: red;
+}
+
+a:visited {
+  color: green;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+a:active {
+  color: blue;
+}
