--- a/bgimage.css
+++ b/bgimage.css
@@ -7,3 +7,25 @@ body{
 body, html {
   height: 100%;
 }
+a:link {
+  color: red;
+}
+
+a:visited {
+  color: green;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+a:active {
+  color: blue;
+}
+button, input[type=submit]{
+  background-color:white;
+  padding:.25rem;
+  border-radius:.5rem;
+  border:solid;
+  border-width:1px;
+}
