--- a/about_html.css
+++ b/about_html.css
@@ -28,3 +28,17 @@ a:hover {
 a:active {
   color: blue;
 }
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+a{
+  text-decoration:none;
+}
+li {
+  display: inline;
+  padding: .25rem;
+  border-style:solid;
+  border-width:1px;
+}
